# bls12_381-sign

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  rust-toolchain
.github/workflows/: dusk_ci.yml
benches/: signature_bench.rs
bls/: CHANGELOG.md  bls.go  bls12381sig.pb.go  bls12381svc_linux  bls12381svc_macos-latest  bls_test.go  ipc.go  ipc_windows.go  svc_darwin.go  svc_linux.go
bls12_381-sign/: Cargo.toml
bls12_381-sign-go/: .gitignore  Makefile  README.md  go.mod  go.sum  libbls.h  svc_darwin.go  svc_linux.go
bls12_381-sign-go/.github/workflows/: dusk_ci.yml
bls12_381-sign-go/bls/: bls.go  bls12381sig.pb.go  bls12381svc_ubuntu-latest  ipc.go  ipc_test.go  libbls.h
bls12_381-sign-go/bls/proto/: bls12381sig.pb.go
bls12_381-sign-ipc/: CHANGELOG.md  Cargo.toml  README.md  build.rs
bls12_381-sign-ipc/src/: lib.rs  main.rs  unix.rs
bls12_381-sign-ipc/src/keys/: apk.rs
bls12_381-sign-ipc/src/svc/: benches.md  svc.rs  unix.rs
bls12_381-sign-ipc/src/tests/: signature_test.rs
bls12_381-sign/src/: error.rs  ffi.rs  hash.rs  keys.rs  signature.rs  tests.rs
bls12_381-sign/src/keys/: public.rs  secret.rs
bls12_381-sign/src/tests/: signature_test.rs
go/bls/: bls.go
go/bls/cgo/: README.md  bls.go  bls12381svc_macos-latest  go.mod
go/bls/grpc/: README.md  bls.go  bls12381sig.pb.go  bls12381svc_ubuntu-latest  bls_test.go  go.mod  ipc_windows.go
go/cgo/bls/: README.md  bls.go  bls_test.go  go.mod  libbls.h
go/grpc/bls/: .gitignore  README.md  bls.go  bls12381sig.pb.go  bls12381sig_grpc.pb.go  bls_test.go  go.mod  go.sum  svc_darwin.go  svc_linux.go
proto/: bls12381sig.proto
rust/: Cargo.toml  rustfmt.toml
rust/bls12_381-sign/: Cargo.toml  README.md  build.rs
rust/bls12_381-sign-ffi/: Cargo.toml
rust/bls12_381-sign-ffi/src/: lib.rs
rust/bls12_381-sign/benches/: signature_bench.rs
rust/bls12_381-sign/src/: error.rs  ffi.rs  hash.rs  lib.rs  signature.rs
rust/bls12_381-sign/src/keys/: apk.rs  public.rs  secret.rs
rust/bls12_381-sign/tests/: signature.rs
rust/grpc-server/: Cargo.toml  README.md  build.rs
rust/grpc-server/src/: client.rs  main.rs
schema/: bls12381sig.proto
src/: error.rs  ffi.rs  hash.rs  lib.rs  signature.rs
src/keys/: apk.rs  public.rs  secret.rs
src/svc/: client.rs  signer.rs  svc.rs  unix.rs
src/svc/protos/: bls12381sig.proto
tests/: signature_test.rs  tests.rs
