[package]
name = "dusk-bls12_381-sign"
version = "0.1.0"
authors = ["Jules de Smit <julesdesmit@gmail.com>", "Loki <david@dusk.network>"]
edition = "2018"

[dependencies]
canonical = { version = "0.6", optional = true }
canonical_derive = { version = "0.6", optional = true }
dusk-bls12_381 = { version = "0.8", default-features = false, features = ["groups"] }
dusk-bytes = "0.1.4"
rand = { version = "0.7", default-features = false }
rand_core = { version = "0.6", default-features = false }
blake2 = { version = "0.9", default-features = false, optional = true }
thiserror = { version = "1.0", default-features = false }
libc = "0.2"
prost =  "0.8"
tonic =  "0.5"
tokio =  {version = "1.0", features = ["macros", "rt-multi-thread"]}
futures = { version = "0.3", default-features = false, features = ["alloc"] }
clap = "3.0.0-beta.2"

[build-dependencies]
tonic-build = "0.5"

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "bls12381svc"
path = "src/svc/svc.rs"

[[bin]]
name = "bls12381client"
path = "src/svc/client.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
incremental = false
codegen-units = 1

[features]
default = ["std", "rand_core/getrandom"]
std = [
    "dusk-bls12_381/default",
    "canon",
    "blake2",
]
canon = [
    "canonical",
    "canonical_derive",
    "dusk-bls12_381/canon",
]
