#![feature(min_const_generics)]
[package]
name = "dusk-bls12_381-sign"
version = "0.1.0"
authors = ["Jules de Smit <julesdesmit@gmail.com>", "Loki <david@dusk.network>"]
edition = "2018"

[dependencies]
async-stream = "0.3"
blake2 = { version = "0.9", default-features = false, optional = true }
canonical = { version = "0.6", optional = true }
canonical_derive = { version = "0.6", optional = true }
clap = "3.0.0-beta.2"
dusk-bls12_381 = { version = "0.8", default-features = false, features = ["groups"] }
dusk-bytes = "0.1.4"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
libc = "0.2"
prost =  "0.8"
rand = "0.7" # { version = "0.7", default-features = false }
rand_core = { version = "0.6", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio =  {version = "1.12", features = ["macros", "rt-multi-thread", "fs"]}
tonic =  "0.5"
tower = "0.4"
ctrlc = "3.1.1"
log = "0.4"

[build-dependencies]
tonic-build = "0.5"

[dev-dependencies]
tower = "0.4"

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "bls12381svc"
path = "src/svc/svc.rs"

[[bin]]
name = "bls12381cli"
path = "src/svc/client.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
incremental = false
codegen-units = 1

[features]
default = ["std", "rand_core/getrandom"]
std = [
    "dusk-bls12_381/default",
    "canon",
    "blake2",
]
canon = [
    "canonical",
    "canonical_derive",
    "dusk-bls12_381/canon",
]
