[workspace]
members = [
    "bls12_381-sign", "bls12_381-sign-ipc"
]
resolver = "2"

[profile.dev.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
incremental = false
codegen-units = 1
