[package]
name = "dusk-bls12_381-sign"
version = "0.1.0"
authors = ["Jules de Smit <julesdesmit@gmail.com>"]
edition = "2018"

[dependencies]
canonical = { version = "0.6", optional = true }
canonical_derive = {version = "0.6", optional = true}
dusk-bls12_381 = { version = "0.8", default-features = false, features = ["groups"] }
dusk-bytes = "0.1.4"
rand_core = {version = "0.6"}
blake2 = {version = "0.9", default-features = false, optional = true}
libc = "0.2"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["std"]
std = [
    "dusk-bls12_381/default",
    "canon",
    "blake2",
]
canon = [
    "canonical",
    "canonical_derive",
    "dusk-bls12_381/canon",
]
