[package]
name = "dusk-bls12_381-sign"
version = "0.1.0-rc.2"
authors = [
    "Jules de Smit <julesdesmit@gmail.com>",
    "Matteo Ferretti <matteo@dusk.network>",
    "Emanuele Paterna <seppia@dusk.network>",
    "David Vennik <david@dusk.network>",
]
edition = "2021"
description = "Implementation of BLS signatures using the BLS12-381 curve"
license = "MPL-2.0"

[dependencies]
blake2 = { version = "0.10", default-features = false }
canonical = { version = "0.6", optional = true }
canonical_derive = { version = "0.6", optional = true }
dusk-bls12_381 = { version = "0.8", default-features = false, features = ["pairings"] }
dusk-bytes = "0.1"
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["std_rng"] }

[features]
canon = [
    "canonical",
    "canonical_derive",
    "dusk-bls12_381/canon"
]
