[package]
name = "dusk-bls12_381-sign"
version = "0.5.0"
authors = [
    "Jules de Smit <julesdesmit@gmail.com>",
    "Matteo Ferretti <matteo@dusk.network>",
    "Emanuele Paterna <seppia@dusk.network>",
    "David Vennik <david@dusk.network>",
]
edition = "2021"
description = "Implementation of BLS signatures using the BLS12-381 curve"
license = "MPL-2.0"

[dependencies]
blake2 = { version = "0.10", default-features = false }
dusk-bls12_381 = { version = "0.12", default-features = false, features = ["alloc", "pairings"] }
dusk-bytes = "0.1"
rand_core = { version = "0.6", default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
ff = { version = "0.13", default-features = false }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["std_rng"] }

[features]
rkyv-impl = [
    "dusk-bls12_381/rkyv-impl",
    "rkyv",
    "bytecheck",
]
