#![feature(min_const_generics)]
[package]
name = "dusk-bls12_381-sign-ipc"
version = "0.2.0"
authors = ["Loki <david@dusk.network>"]
edition = "2018"

[dependencies]
dusk-bls12_381-sign = { version = "0.4.0-rc", path = "../bls12_381-sign" }
async-stream = "0.3"
dusk-bytes = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost =  "0.8"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio =  {version = "1.12", features = ["macros", "rt-multi-thread", "fs"]}
tonic =  "0.5"
tower = "0.4"
ctrlc = "3.1.1"
log = "0.4"

[build-dependencies]
tonic-build = "0.5"

[dev-dependencies]
tower = "0.4"

#[lib]
#crate-type = ["rlib", "staticlib"]

[[bin]]
name = "bls12381svc"
path = "src/main.rs"

[[bin]]
name = "bls12381cli"
path = "src/client.rs"
